--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="pl">
   <head>
@@ -101,18 +100,17 @@
 			  //get the parent table for convenience
 			  let positionTable = document.getElementById("positionTable");
 			  let workerTable=document.getElementById("workerTable");
+			  let positionRows = positionTable.querySelectorAll("tr");
+			  let workerRows=workerTable.querySelectorAll("tr");
 
-			  if(positionTable.length!=workerTable.length)
+			  let positionPrepare = Array.from(positionRows).slice(1);
+			  let workerPrepare=Array.from(workerRows).slice(1);
+			  if(positionPrepare.length!=workerPrepare.length)
 			  {
 			  	alert("Tabele zawierają różne liczbę rekordów");
 			  }
 			  else
 			  {
-				  let positionRows = positionTable.querySelectorAll("tr");
-				  let workerRows=workerTable.querySelectorAll("tr");
-
-				  let positionPrepare = Array.from(positionRows).slice(1);
-				  let workerPrepare=Array.from(workerRows).slice(1);
 				  shuffledPositions=shuffleArray(positionPrepare);
 				  shuffledWorkers=shuffleArray(workerPrepare);
 
