--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 					<form onsubmit="return addPosition()" class="col-sm-6 text-center" id="positionForm">
 					  <label for="position">Stanowisko:</label><br>
 					  <input type="text" id="position" name="position"><br>
-					  <button form="positionForm" value="Submit">Submit</button>
+					  <button form="positionForm" value="Submit">Dodaj</button>
 					</form>
 					<form onsubmit="return addWorker()" class="col-sm-6 text-center" id="workerForm">
 					  <label for="worker">Pracownik:</label><br>
 					  <input type="text" id="worker" name="worker"><br>
-					  <button type="submit" form="workerForm" value="Submit">Submit</button>
+					  <button type="submit" form="workerForm" value="Submit">Dodaj</button>
 					</form>
 				</article>
 				<article class="row text-center">
