--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Ochnik</title>
+    <title>LOSOWANIE</title>
   </head>
   	<body>
   		<main class="container-fluid">
 	    	<h1 class="display-1 text-center"> Ochnik </h1>
 	    	<article class="row">
 					<form onsubmit="return addPosition()" class="col-sm-6 text-center" id="positionForm">
-					  <label for="position">Stanowisko:</label><br>
+					  <label for="position">OBSZAR:</label><br>
 					  <input type="text" id="position" name="position"><br>
 					  <button form="positionForm" value="Submit">Dodaj</button>
 					</form>
 					<form onsubmit="return addWorker()" class="col-sm-6 text-center" id="workerForm">
-					  <label for="worker">Pracownik:</label><br>
+					  <label for="worker">AUDYTOR:</label><br>
 					  <input type="text" id="worker" name="worker"><br>
 					  <button type="submit" form="workerForm" value="Submit">Dodaj</button>
 					</form>
@@ -28,7 +28,7 @@
 						<table id="positionTable" class="table table-striped table-dark">
 
 							<thead>
-								<th>Stanowisko</th>
+								<th>OBSZAR</th>
 							</thead>
 							<tbody>
 							</tbody>
@@ -38,7 +38,7 @@
 					<section class="col-sm-6">
 						<table id="workerTable" class="table table-striped  table-dark">
 							<thead>
-								<th>Pracownik</th>
+								<th>AUDYTOR</th>
 							</thead>
 							<tbody>
 							</tbody>
