--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
   </head>
   	<body>
   		<main class="container-fluid">
-	    	<h1 class="display-1 text-center"> Ochnik </h1>
 	    	<article class="row">
 					<form onsubmit="return addPosition()" class="col-sm-6 text-center" id="positionForm">
-					  <label for="position">Stanowisko:</label><br>
+					  <label for="position">Obszar:</label><br>
 					  <input type="text" id="position" name="position"><br>
 					  <button form="positionForm" value="Submit">Dodaj</button>
 					</form>
 					<form onsubmit="return addWorker()" class="col-sm-6 text-center" id="workerForm">
-					  <label for="worker">Pracownik:</label><br>
+					  <label for="worker">Audytor:</label><br>
 					  <input type="text" id="worker" name="worker"><br>
 					  <button type="submit" form="workerForm" value="Submit">Dodaj</button>
 					</form>
