--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<table id="positionTable" class="table table-striped table-dark">
 
 							<thead>
-								<th>Stanowisko</th>
+								<th>Obszar</th>
 							</thead>
 							<tbody>
 							</tbody>
@@ -37,7 +37,7 @@
 					<section class="col-sm-6">
 						<table id="workerTable" class="table table-striped  table-dark">
 							<thead>
-								<th>Pracownik</th>
+								<th>Audytor</th>
 							</thead>
 							<tbody>
 							</tbody>
